// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logs Explorer Tests Logs Explorer Page should render with data 1`] = `
.c0.c0.c0 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #ffffffd9;
}

<div>
  <div
    class="logs-module-page filter-visible"
  >
    <section
      class="log-quick-filter-left-section"
    >
      <div
        class="quick-filters"
      >
        <section
          class="header"
        >
          <section
            class="left-actions"
          >
            <span
              aria-label="filter"
              class="anticon anticon-filter"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="filter"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M880.1 154H143.9c-24.5 0-39.8 26.7-27.5 48L349 597.4V838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V597.4L907.7 202c12.2-21.3-3.1-48-27.6-48zM603.4 798H420.6V642h182.9v156zm9.6-236.6l-9.5 16.6h-183l-9.5-16.6L212.7 226h598.6L613 561.4z"
                />
              </svg>
            </span>
            <span
              class="ant-typography text css-dev-only-do-not-override-2i2tap"
            >
              Filters for
            </span>
            <span
              class="ant-typography sync-tag css-dev-only-do-not-override-2i2tap"
            >
              A
            </span>
          </section>
          <section
            class="right-actions"
          >
            <span
              aria-label="sync"
              class="anticon anticon-sync sync-icon"
              role="img"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                data-icon="sync"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M168 504.2c1-43.7 10-86.1 26.9-126 17.3-41 42.1-77.7 73.7-109.4S337 212.3 378 195c42.4-17.9 87.4-27 133.9-27s91.5 9.1 133.8 27A341.5 341.5 0 01755 268.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.7 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c0-6.7-7.7-10.5-12.9-6.3l-56.4 44.1C765.8 155.1 646.2 92 511.8 92 282.7 92 96.3 275.6 92 503.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8zm756 7.8h-60c-4.4 0-7.9 3.5-8 7.8-1 43.7-10 86.1-26.9 126-17.3 41-42.1 77.8-73.7 109.4A342.45 342.45 0 01512.1 856a342.24 342.24 0 01-243.2-100.8c-9.9-9.9-19.2-20.4-27.8-31.4l60.2-47a8 8 0 00-3-14.1l-175.7-43c-5-1.2-9.9 2.6-9.9 7.7l-.7 181c0 6.7 7.7 10.5 12.9 6.3l56.4-44.1C258.2 868.9 377.8 932 512.2 932c229.2 0 415.5-183.7 419.8-411.8a8 8 0 00-8-8.2z"
                />
              </svg>
            </span>
            <div
              class="divider-filter"
            />
            <span
              aria-label="vertical-align-top"
              class="anticon anticon-vertical-align-top"
              role="img"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                data-icon="vertical-align-top"
                fill="currentColor"
                focusable="false"
                height="1em"
                style="transform: rotate(270deg);"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M859.9 168H164.1c-4.5 0-8.1 3.6-8.1 8v60c0 4.4 3.6 8 8.1 8h695.8c4.5 0 8.1-3.6 8.1-8v-60c0-4.4-3.6-8-8.1-8zM518.3 355a8 8 0 00-12.6 0l-112 141.7a7.98 7.98 0 006.3 12.9h73.9V848c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V509.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 355z"
                />
              </svg>
            </span>
          </section>
        </section>
        <section
          class="filters"
        >
          <div
            class="checkbox-filter"
          >
            <section
              class="filter-header-checkbox"
            >
              <section
                class="left-action"
              >
                <svg
                  class="lucide lucide-chevron-down"
                  cursor="pointer"
                  fill="none"
                  height="13"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
                <span
                  class="ant-typography title css-dev-only-do-not-override-2i2tap"
                >
                  Severity Text
                </span>
              </section>
              <section
                class="right-action"
              >
                <span
                  class="ant-typography clear-all css-dev-only-do-not-override-2i2tap"
                >
                  Clear All
                </span>
              </section>
            </section>
            <section
              class="loading"
            >
              <div
                class="ant-skeleton css-dev-only-do-not-override-2i2tap"
              >
                <div
                  class="ant-skeleton-content"
                >
                  <h3
                    class="ant-skeleton-title"
                    style="width: 38%;"
                  />
                  <ul
                    class="ant-skeleton-paragraph"
                  >
                    <li />
                    <li />
                    <li />
                    <li
                      style="width: 61%;"
                    />
                  </ul>
                </div>
              </div>
            </section>
          </div>
          <div
            class="checkbox-filter"
          >
            <section
              class="filter-header-checkbox"
            >
              <section
                class="left-action"
              >
                <svg
                  class="lucide lucide-chevron-right"
                  cursor="pointer"
                  fill="none"
                  height="13"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
                <span
                  class="ant-typography title css-dev-only-do-not-override-2i2tap"
                >
                  Environment
                </span>
              </section>
              <section
                class="right-action"
              />
            </section>
          </div>
          <div
            class="checkbox-filter"
          >
            <section
              class="filter-header-checkbox"
            >
              <section
                class="left-action"
              >
                <svg
                  class="lucide lucide-chevron-right"
                  cursor="pointer"
                  fill="none"
                  height="13"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
                <span
                  class="ant-typography title css-dev-only-do-not-override-2i2tap"
                >
                  Service Name
                </span>
              </section>
              <section
                class="right-action"
              />
            </section>
          </div>
          <div
            class="checkbox-filter"
          >
            <section
              class="filter-header-checkbox"
            >
              <section
                class="left-action"
              >
                <svg
                  class="lucide lucide-chevron-right"
                  cursor="pointer"
                  fill="none"
                  height="13"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
                <span
                  class="ant-typography title css-dev-only-do-not-override-2i2tap"
                >
                  Hostname
                </span>
              </section>
              <section
                class="right-action"
              />
            </section>
          </div>
          <div
            class="checkbox-filter"
          >
            <section
              class="filter-header-checkbox"
            >
              <section
                class="left-action"
              >
                <svg
                  class="lucide lucide-chevron-right"
                  cursor="pointer"
                  fill="none"
                  height="13"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
                <span
                  class="ant-typography title css-dev-only-do-not-override-2i2tap"
                >
                  K8s Cluster Name
                </span>
              </section>
              <section
                class="right-action"
              />
            </section>
          </div>
          <div
            class="checkbox-filter"
          >
            <section
              class="filter-header-checkbox"
            >
              <section
                class="left-action"
              >
                <svg
                  class="lucide lucide-chevron-right"
                  cursor="pointer"
                  fill="none"
                  height="13"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
                <span
                  class="ant-typography title css-dev-only-do-not-override-2i2tap"
                >
                  K8s Deployment Name
                </span>
              </section>
              <section
                class="right-action"
              />
            </section>
          </div>
          <div
            class="checkbox-filter"
          >
            <section
              class="filter-header-checkbox"
            >
              <section
                class="left-action"
              >
                <svg
                  class="lucide lucide-chevron-right"
                  cursor="pointer"
                  fill="none"
                  height="13"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
                <span
                  class="ant-typography title css-dev-only-do-not-override-2i2tap"
                >
                  K8s Namespace Name
                </span>
              </section>
              <section
                class="right-action"
              />
            </section>
          </div>
        </section>
      </div>
    </section>
    <section
      class="log-module-right-section"
    >
      <div
        class="toolbar"
      >
        <div
          class="leftActions"
        >
          <div
            class="left-toolbar"
          >
            <div
              class="left-toolbar-query-actions"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-2i2tap ant-btn-default search action-btn active-tab"
                type="button"
              >
                <svg
                  class="lucide lucide-square-mouse-pointer"
                  data-testid="search-view"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 11V5a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h6"
                  />
                  <path
                    d="m12 12 4 10 1.7-4.3L22 16Z"
                  />
                </svg>
              </button>
              <button
                class="ant-btn css-dev-only-do-not-override-2i2tap ant-btn-default query-builder action-btn"
                type="button"
              >
                <svg
                  class="lucide lucide-atom"
                  data-testid="query-builder-view"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="1"
                  />
                  <path
                    d="M20.2 20.2c2.04-2.03.02-7.36-4.5-11.9-4.54-4.52-9.87-6.54-11.9-4.5-2.04 2.03-.02 7.36 4.5 11.9 4.54 4.52 9.87 6.54 11.9 4.5Z"
                  />
                  <path
                    d="M15.7 15.7c4.52-4.54 6.54-9.87 4.5-11.9-2.03-2.04-7.36-.02-11.9 4.5-4.52 4.54-6.54 9.87-4.5 11.9 2.03 2.04 7.36.02 11.9-4.5Z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="frequency-chart-view-controller"
            >
              <article
                class="ant-typography css-dev-only-do-not-override-2i2tap"
              >
                Frequency chart
              </article>
              <button
                aria-checked="true"
                class="ant-switch ant-switch-small css-dev-only-do-not-override-2i2tap ant-switch-checked"
                role="switch"
                type="button"
              >
                <div
                  class="ant-switch-handle"
                />
                <span
                  class="ant-switch-inner"
                >
                  <span
                    class="ant-switch-inner-checked"
                  />
                  <span
                    class="ant-switch-inner-unchecked"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="timeRange"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-2i2tap ant-btn-primary ant-btn-dangerous"
            data-testid="newExplorerCTA"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="compass"
                class="anticon anticon-compass"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="compass"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372zm198.4-588.1a32 32 0 00-24.5.5L414.9 415 296.4 686c-3.6 8.2-3.6 17.5 0 25.7 3.4 7.8 9.7 13.9 17.7 17 3.8 1.5 7.7 2.2 11.7 2.2 4.4 0 8.7-.9 12.8-2.7l271-118.6 118.5-271a32.06 32.06 0 00-17.7-42.7zM576.8 534.4l26.2 26.2-42.4 42.4-26.2-26.2L380 644.4 447.5 490 422 464.4l42.4-42.4 25.5 25.5L644.4 380l-67.6 154.4zM464.4 422L422 464.4l25.5 25.6 86.9 86.8 26.2 26.2 42.4-42.4-26.2-26.2-86.8-86.9z"
                  />
                </svg>
              </span>
            </span>
            <span>
              Switch to Old Logs Explorer
            </span>
          </button>
          <div
            class="date-time-selector"
          >
            <form
              class="ant-form ant-form-inline css-dev-only-do-not-override-2i2tap c0"
            >
              <div
                class="c1"
              >
                <div
                  class="custom-time-picker"
                >
                  <span
                    class="ant-input-affix-wrapper timeSelection-input timeSelection-input-container css-dev-only-do-not-override-2i2tap"
                  >
                    <span
                      class="ant-input-prefix"
                    >
                      <svg
                        class="lucide lucide-clock"
                        fill="none"
                        height="14"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                        />
                        <polyline
                          points="12 6 12 12 16 14"
                        />
                      </svg>
                    </span>
                    <input
                      class="ant-input css-dev-only-do-not-override-2i2tap"
                      placeholder="Last 30 minutes"
                      type="text"
                      value=""
                    />
                    <span
                      class="ant-input-suffix"
                    >
                      <svg
                        class="lucide lucide-chevron-down"
                        fill="none"
                        height="14"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m6 9 6 6 6-6"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <button
                  class="ant-btn css-dev-only-do-not-override-2i2tap ant-btn-default share-link-btn periscope-btn shareable-link-popover"
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <svg
                      class="lucide lucide-send"
                      fill="none"
                      height="14"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m22 2-7 20-4-9-9-4Z"
                      />
                      <path
                        d="M22 2 11 13"
                      />
                    </svg>
                  </span>
                  <span>
                    Share
                  </span>
                </button>
              </div>
            </form>
          </div>
        </div>
        <div
          class="rightActions"
        >
          <div>
            <button
              class="ant-btn css-dev-only-do-not-override-2i2tap ant-btn-primary right-toolbar"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  class="lucide lucide-play"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="6 3 20 12 6 21 6 3"
                  />
                </svg>
              </span>
              <span>
                Stage & Run Query
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="log-explorer-query-container"
        >
          <div>
            <div>
              <div
                class="qb-search-view-container"
              >
                <div
                  class="query-builder-search-v2"
                >
                  <div
                    class="ant-select query-builder-search css-dev-only-do-not-override-2i2tap ant-select-multiple ant-select-show-search"
                    style="width: 100%; min-width: 7.7rem;"
                  >
                    <div
                      class="ant-select-selector"
                    >
                      <div
                        class="ant-select-selection-overflow"
                      >
                        <div
                          class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                          style="opacity: 1;"
                        >
                          <div
                            class="ant-select-selection-search"
                            style="width: 0px;"
                          >
                            <input
                              aria-autocomplete="list"
                              aria-controls="rc_select_TEST_OR_SSR_list"
                              aria-expanded="false"
                              aria-haspopup="listbox"
                              aria-owns="rc_select_TEST_OR_SSR_list"
                              autocomplete="off"
                              class="ant-select-selection-search-input"
                              id="rc_select_TEST_OR_SSR"
                              role="combobox"
                              type="search"
                              value=""
                            />
                            <span
                              aria-hidden="true"
                              class="ant-select-selection-search-mirror"
                            >
                               
                            </span>
                          </div>
                        </div>
                      </div>
                      <span
                        class="ant-select-selection-placeholder"
                      >
                        Search Filter : select options from suggested values, for IN/NOT IN operators - press "Enter" after selecting options
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="logs-explorer-views"
          >
            <div
              class="logs-explorer-views-container"
            >
              <div>
                Frequency chart content
              </div>
              <div
                class="logs-explorer-views-types"
              >
                <div
                  class="views-tabs-container"
                >
                  <div
                    class="ant-btn-group views-tabs css-dev-only-do-not-override-2i2tap"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-2i2tap ant-btn-default selected_view tab"
                      data-testid="logs-list-view"
                      type="button"
                      value="list"
                    >
                      <span>
                        List view
                      </span>
                    </button>
                    <button
                      class="ant-btn css-dev-only-do-not-override-2i2tap ant-btn-default tab"
                      data-testid="time-series-view"
                      type="button"
                      value="graph"
                    >
                      <span>
                        Time series
                      </span>
                    </button>
                    <button
                      class="ant-btn css-dev-only-do-not-override-2i2tap ant-btn-default tab"
                      data-testid="table-view"
                      type="button"
                      value="table"
                    >
                      <span>
                        Table
                      </span>
                    </button>
                  </div>
                  <div
                    class="logs-actions-container"
                  >
                    <div
                      class="tab-options"
                    >
                      <button
                        class="ant-btn css-dev-only-do-not-override-2i2tap ant-btn-default ant-btn-icon-only periscope-btn"
                        type="button"
                      >
                        <span
                          class="ant-btn-icon"
                        >
                          <svg
                            class="lucide lucide-file-down"
                            fill="none"
                            height="14"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="14"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
                            />
                            <path
                              d="M14 2v4a2 2 0 0 0 2 2h4"
                            />
                            <path
                              d="M12 18v-6"
                            />
                            <path
                              d="m9 15 3 3 3-3"
                            />
                          </svg>
                        </span>
                      </button>
                      <div
                        class="format-options-container"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-2i2tap ant-btn-default ant-btn-icon-only periscope-btn"
                          data-testid="periscope-btn"
                          type="button"
                        >
                          <span
                            class="ant-btn-icon"
                          >
                            <svg
                              class="lucide lucide-sliders-vertical"
                              fill="none"
                              height="14"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="14"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <line
                                x1="4"
                                x2="4"
                                y1="21"
                                y2="14"
                              />
                              <line
                                x1="4"
                                x2="4"
                                y1="10"
                                y2="3"
                              />
                              <line
                                x1="12"
                                x2="12"
                                y1="21"
                                y2="12"
                              />
                              <line
                                x1="12"
                                x2="12"
                                y1="8"
                                y2="3"
                              />
                              <line
                                x1="20"
                                x2="20"
                                y1="21"
                                y2="16"
                              />
                              <line
                                x1="20"
                                x2="20"
                                y1="12"
                                y2="3"
                              />
                              <line
                                x1="2"
                                x2="6"
                                y1="14"
                                y2="14"
                              />
                              <line
                                x1="10"
                                x2="14"
                                y1="8"
                                y2="8"
                              />
                              <line
                                x1="18"
                                x2="22"
                                y1="16"
                                y2="16"
                              />
                            </svg>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="logs-explorer-views-type-content"
                >
                  <div
                    class="logs-list-view-container"
                  >
                    <div
                      class="no-logs-container"
                    >
                      <div
                        class="no-logs-container-content"
                      >
                        <img
                          alt="eyes emoji"
                          class="eyes-emoji"
                          src="/Images/eyesEmoji.svg"
                        />
                        <article
                          class="ant-typography no-logs-text css-dev-only-do-not-override-2i2tap"
                        >
                          No 
                          logs
                           yet.
                          <span
                            class="sub-text"
                          >
                             
                            When we receive 
                            logs
                            , they would show up here
                          </span>
                        </article>
                        <a
                          class="ant-typography send-logs-link css-dev-only-do-not-override-2i2tap"
                        >
                          Sending 
                          logs
                           to SigNoz 
                          <svg
                            class="lucide lucide-arrow-up-right"
                            fill="none"
                            height="16"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M7 7h10v10"
                            />
                            <path
                              d="M7 17 17 7"
                            />
                          </svg>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="explorer-options-container"
              >
                <div
                  class="explorer-options"
                  style="background: transparent;"
                >
                  <div
                    class="view-options"
                  >
                    <div
                      class="ant-select views-dropdown css-dev-only-do-not-override-2i2tap ant-select-single ant-select-show-arrow ant-select-loading ant-select-show-search"
                      style="min-width: 170px;"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="rc_select_TEST_OR_SSR"
                            role="combobox"
                            type="search"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          Select a view
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow ant-select-arrow-loading"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="loading"
                          class="anticon anticon-loading anticon-spin"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="loading"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="0 0 1024 1024"
                            width="1em"
                          >
                            <path
                              d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                    <button
                      class="ant-btn css-dev-only-do-not-override-2i2tap ant-btn-round ant-btn-default"
                      disabled=""
                      type="button"
                    >
                      <span
                        class="ant-btn-icon"
                      >
                        <svg
                          class="lucide lucide-disc3"
                          fill="none"
                          height="16"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M6 12c0-1.7.7-3.2 1.8-4.2"
                          />
                          <circle
                            cx="12"
                            cy="12"
                            r="2"
                          />
                          <path
                            d="M18 12c0 1.7-.7 3.2-1.8 4.2"
                          />
                        </svg>
                      </span>
                      <span>
                        Save this view
                      </span>
                    </button>
                  </div>
                  <hr
                    class=""
                  />
                  <div
                    class="actions"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-2i2tap ant-btn-round ant-btn-default"
                      disabled=""
                      type="button"
                    >
                      <span
                        class="ant-btn-icon"
                      >
                        <svg
                          class="lucide lucide-concierge-bell"
                          fill="none"
                          height="16"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M3 20a1 1 0 0 1-1-1v-1a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v1a1 1 0 0 1-1 1Z"
                          />
                          <path
                            d="M20 16a8 8 0 1 0-16 0"
                          />
                          <path
                            d="M12 4v4"
                          />
                          <path
                            d="M10 4h4"
                          />
                        </svg>
                      </span>
                      <span>
                        Create an Alert
                      </span>
                    </button>
                    <button
                      class="ant-btn css-dev-only-do-not-override-2i2tap ant-btn-round ant-btn-primary"
                      disabled=""
                      type="button"
                    >
                      <span
                        class="ant-btn-icon"
                      >
                        <svg
                          class="lucide lucide-plus"
                          fill="none"
                          height="16"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5 12h14"
                          />
                          <path
                            d="M12 5v14"
                          />
                        </svg>
                      </span>
                      <span>
                        Add to Dashboard
                      </span>
                    </button>
                  </div>
                  <div
                    class="actions"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle info-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                    <button
                      class="ant-btn css-dev-only-do-not-override-2i2tap ant-btn-circle ant-btn-default ant-btn-icon-only"
                      data-testid="hide-toolbar"
                      disabled=""
                      type="button"
                    >
                      <span
                        class="ant-btn-icon"
                      >
                        <svg
                          class="lucide lucide-panel-bottom-close"
                          fill="none"
                          height="16"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <rect
                            height="18"
                            rx="2"
                            width="18"
                            x="3"
                            y="3"
                          />
                          <path
                            d="M3 15h18"
                          />
                          <path
                            d="m15 8-3 3-3-3"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="explorer-option-droppable-container"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Logs Explorer Tests Logs Explorer default view test without data 1`] = `
.c0.c0.c0 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #ffffffd9;
}

<div>
  <div
    class="logs-module-page filter-visible"
  >
    <section
      class="log-quick-filter-left-section"
    >
      <div
        class="quick-filters"
      >
        <section
          class="header"
        >
          <section
            class="left-actions"
          >
            <span
              aria-label="filter"
              class="anticon anticon-filter"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="filter"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M880.1 154H143.9c-24.5 0-39.8 26.7-27.5 48L349 597.4V838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V597.4L907.7 202c12.2-21.3-3.1-48-27.6-48zM603.4 798H420.6V642h182.9v156zm9.6-236.6l-9.5 16.6h-183l-9.5-16.6L212.7 226h598.6L613 561.4z"
                />
              </svg>
            </span>
            <span
              class="ant-typography text css-dev-only-do-not-override-2i2tap"
            >
              Filters for
            </span>
            <span
              class="ant-typography sync-tag css-dev-only-do-not-override-2i2tap"
            >
              A
            </span>
          </section>
          <section
            class="right-actions"
          >
            <span
              aria-label="sync"
              class="anticon anticon-sync sync-icon"
              role="img"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                data-icon="sync"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M168 504.2c1-43.7 10-86.1 26.9-126 17.3-41 42.1-77.7 73.7-109.4S337 212.3 378 195c42.4-17.9 87.4-27 133.9-27s91.5 9.1 133.8 27A341.5 341.5 0 01755 268.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.7 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c0-6.7-7.7-10.5-12.9-6.3l-56.4 44.1C765.8 155.1 646.2 92 511.8 92 282.7 92 96.3 275.6 92 503.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8zm756 7.8h-60c-4.4 0-7.9 3.5-8 7.8-1 43.7-10 86.1-26.9 126-17.3 41-42.1 77.8-73.7 109.4A342.45 342.45 0 01512.1 856a342.24 342.24 0 01-243.2-100.8c-9.9-9.9-19.2-20.4-27.8-31.4l60.2-47a8 8 0 00-3-14.1l-175.7-43c-5-1.2-9.9 2.6-9.9 7.7l-.7 181c0 6.7 7.7 10.5 12.9 6.3l56.4-44.1C258.2 868.9 377.8 932 512.2 932c229.2 0 415.5-183.7 419.8-411.8a8 8 0 00-8-8.2z"
                />
              </svg>
            </span>
            <div
              class="divider-filter"
            />
            <span
              aria-label="vertical-align-top"
              class="anticon anticon-vertical-align-top"
              role="img"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                data-icon="vertical-align-top"
                fill="currentColor"
                focusable="false"
                height="1em"
                style="transform: rotate(270deg);"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M859.9 168H164.1c-4.5 0-8.1 3.6-8.1 8v60c0 4.4 3.6 8 8.1 8h695.8c4.5 0 8.1-3.6 8.1-8v-60c0-4.4-3.6-8-8.1-8zM518.3 355a8 8 0 00-12.6 0l-112 141.7a7.98 7.98 0 006.3 12.9h73.9V848c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V509.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 355z"
                />
              </svg>
            </span>
          </section>
        </section>
        <section
          class="filters"
        >
          <div
            class="checkbox-filter"
          >
            <section
              class="filter-header-checkbox"
            >
              <section
                class="left-action"
              >
                <svg
                  class="lucide lucide-chevron-down"
                  cursor="pointer"
                  fill="none"
                  height="13"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
                <span
                  class="ant-typography title css-dev-only-do-not-override-2i2tap"
                >
                  Severity Text
                </span>
              </section>
              <section
                class="right-action"
              >
                <span
                  class="ant-typography clear-all css-dev-only-do-not-override-2i2tap"
                >
                  Clear All
                </span>
              </section>
            </section>
            <section
              class="loading"
            >
              <div
                class="ant-skeleton css-dev-only-do-not-override-2i2tap"
              >
                <div
                  class="ant-skeleton-content"
                >
                  <h3
                    class="ant-skeleton-title"
                    style="width: 38%;"
                  />
                  <ul
                    class="ant-skeleton-paragraph"
                  >
                    <li />
                    <li />
                    <li />
                    <li
                      style="width: 61%;"
                    />
                  </ul>
                </div>
              </div>
            </section>
          </div>
          <div
            class="checkbox-filter"
          >
            <section
              class="filter-header-checkbox"
            >
              <section
                class="left-action"
              >
                <svg
                  class="lucide lucide-chevron-right"
                  cursor="pointer"
                  fill="none"
                  height="13"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
                <span
                  class="ant-typography title css-dev-only-do-not-override-2i2tap"
                >
                  Environment
                </span>
              </section>
              <section
                class="right-action"
              />
            </section>
          </div>
          <div
            class="checkbox-filter"
          >
            <section
              class="filter-header-checkbox"
            >
              <section
                class="left-action"
              >
                <svg
                  class="lucide lucide-chevron-right"
                  cursor="pointer"
                  fill="none"
                  height="13"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
                <span
                  class="ant-typography title css-dev-only-do-not-override-2i2tap"
                >
                  Service Name
                </span>
              </section>
              <section
                class="right-action"
              />
            </section>
          </div>
          <div
            class="checkbox-filter"
          >
            <section
              class="filter-header-checkbox"
            >
              <section
                class="left-action"
              >
                <svg
                  class="lucide lucide-chevron-right"
                  cursor="pointer"
                  fill="none"
                  height="13"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
                <span
                  class="ant-typography title css-dev-only-do-not-override-2i2tap"
                >
                  Hostname
                </span>
              </section>
              <section
                class="right-action"
              />
            </section>
          </div>
          <div
            class="checkbox-filter"
          >
            <section
              class="filter-header-checkbox"
            >
              <section
                class="left-action"
              >
                <svg
                  class="lucide lucide-chevron-right"
                  cursor="pointer"
                  fill="none"
                  height="13"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
                <span
                  class="ant-typography title css-dev-only-do-not-override-2i2tap"
                >
                  K8s Cluster Name
                </span>
              </section>
              <section
                class="right-action"
              />
            </section>
          </div>
          <div
            class="checkbox-filter"
          >
            <section
              class="filter-header-checkbox"
            >
              <section
                class="left-action"
              >
                <svg
                  class="lucide lucide-chevron-right"
                  cursor="pointer"
                  fill="none"
                  height="13"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
                <span
                  class="ant-typography title css-dev-only-do-not-override-2i2tap"
                >
                  K8s Deployment Name
                </span>
              </section>
              <section
                class="right-action"
              />
            </section>
          </div>
          <div
            class="checkbox-filter"
          >
            <section
              class="filter-header-checkbox"
            >
              <section
                class="left-action"
              >
                <svg
                  class="lucide lucide-chevron-right"
                  cursor="pointer"
                  fill="none"
                  height="13"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
                <span
                  class="ant-typography title css-dev-only-do-not-override-2i2tap"
                >
                  K8s Namespace Name
                </span>
              </section>
              <section
                class="right-action"
              />
            </section>
          </div>
        </section>
      </div>
    </section>
    <section
      class="log-module-right-section"
    >
      <div
        class="toolbar"
      >
        <div
          class="leftActions"
        >
          <div
            class="left-toolbar"
          >
            <div
              class="left-toolbar-query-actions"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-2i2tap ant-btn-default search action-btn active-tab"
                type="button"
              >
                <svg
                  class="lucide lucide-square-mouse-pointer"
                  data-testid="search-view"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 11V5a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h6"
                  />
                  <path
                    d="m12 12 4 10 1.7-4.3L22 16Z"
                  />
                </svg>
              </button>
              <button
                class="ant-btn css-dev-only-do-not-override-2i2tap ant-btn-default query-builder action-btn"
                type="button"
              >
                <svg
                  class="lucide lucide-atom"
                  data-testid="query-builder-view"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="1"
                  />
                  <path
                    d="M20.2 20.2c2.04-2.03.02-7.36-4.5-11.9-4.54-4.52-9.87-6.54-11.9-4.5-2.04 2.03-.02 7.36 4.5 11.9 4.54 4.52 9.87 6.54 11.9 4.5Z"
                  />
                  <path
                    d="M15.7 15.7c4.52-4.54 6.54-9.87 4.5-11.9-2.03-2.04-7.36-.02-11.9 4.5-4.52 4.54-6.54 9.87-4.5 11.9 2.03 2.04 7.36.02 11.9-4.5Z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="frequency-chart-view-controller"
            >
              <article
                class="ant-typography css-dev-only-do-not-override-2i2tap"
              >
                Frequency chart
              </article>
              <button
                aria-checked="false"
                class="ant-switch ant-switch-small css-dev-only-do-not-override-2i2tap"
                role="switch"
                type="button"
              >
                <div
                  class="ant-switch-handle"
                />
                <span
                  class="ant-switch-inner"
                >
                  <span
                    class="ant-switch-inner-checked"
                  />
                  <span
                    class="ant-switch-inner-unchecked"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="timeRange"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-2i2tap ant-btn-primary ant-btn-dangerous"
            data-testid="newExplorerCTA"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="compass"
                class="anticon anticon-compass"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="compass"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372zm198.4-588.1a32 32 0 00-24.5.5L414.9 415 296.4 686c-3.6 8.2-3.6 17.5 0 25.7 3.4 7.8 9.7 13.9 17.7 17 3.8 1.5 7.7 2.2 11.7 2.2 4.4 0 8.7-.9 12.8-2.7l271-118.6 118.5-271a32.06 32.06 0 00-17.7-42.7zM576.8 534.4l26.2 26.2-42.4 42.4-26.2-26.2L380 644.4 447.5 490 422 464.4l42.4-42.4 25.5 25.5L644.4 380l-67.6 154.4zM464.4 422L422 464.4l25.5 25.6 86.9 86.8 26.2 26.2 42.4-42.4-26.2-26.2-86.8-86.9z"
                  />
                </svg>
              </span>
            </span>
            <span>
              Switch to Old Logs Explorer
            </span>
          </button>
          <div
            class="date-time-selector"
          >
            <form
              class="ant-form ant-form-inline css-dev-only-do-not-override-2i2tap c0"
            >
              <div
                class="c1"
              >
                <div
                  class="custom-time-picker"
                >
                  <span
                    class="ant-input-affix-wrapper timeSelection-input timeSelection-input-container css-dev-only-do-not-override-2i2tap"
                  >
                    <span
                      class="ant-input-prefix"
                    >
                      <svg
                        class="lucide lucide-clock"
                        fill="none"
                        height="14"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                        />
                        <polyline
                          points="12 6 12 12 16 14"
                        />
                      </svg>
                    </span>
                    <input
                      class="ant-input css-dev-only-do-not-override-2i2tap"
                      placeholder="Last 30 minutes"
                      type="text"
                      value=""
                    />
                    <span
                      class="ant-input-suffix"
                    >
                      <svg
                        class="lucide lucide-chevron-down"
                        fill="none"
                        height="14"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m6 9 6 6 6-6"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <button
                  class="ant-btn css-dev-only-do-not-override-2i2tap ant-btn-default share-link-btn periscope-btn shareable-link-popover"
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <svg
                      class="lucide lucide-send"
                      fill="none"
                      height="14"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m22 2-7 20-4-9-9-4Z"
                      />
                      <path
                        d="M22 2 11 13"
                      />
                    </svg>
                  </span>
                  <span>
                    Share
                  </span>
                </button>
              </div>
            </form>
          </div>
        </div>
        <div
          class="rightActions"
        >
          <div>
            <button
              class="ant-btn css-dev-only-do-not-override-2i2tap ant-btn-primary right-toolbar"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  class="lucide lucide-play"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="6 3 20 12 6 21 6 3"
                  />
                </svg>
              </span>
              <span>
                Stage & Run Query
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="log-explorer-query-container"
        >
          <div>
            <div>
              <div
                class="qb-search-view-container"
              >
                <div
                  class="query-builder-search-v2"
                >
                  <div
                    class="ant-select query-builder-search css-dev-only-do-not-override-2i2tap ant-select-multiple ant-select-show-search"
                    style="width: 100%; min-width: 7.7rem;"
                  >
                    <div
                      class="ant-select-selector"
                    >
                      <div
                        class="ant-select-selection-overflow"
                      >
                        <div
                          class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                          style="opacity: 1;"
                        >
                          <div
                            class="ant-select-selection-search"
                            style="width: 0px;"
                          >
                            <input
                              aria-autocomplete="list"
                              aria-controls="rc_select_TEST_OR_SSR_list"
                              aria-expanded="false"
                              aria-haspopup="listbox"
                              aria-owns="rc_select_TEST_OR_SSR_list"
                              autocomplete="off"
                              class="ant-select-selection-search-input"
                              id="rc_select_TEST_OR_SSR"
                              role="combobox"
                              type="search"
                              value=""
                            />
                            <span
                              aria-hidden="true"
                              class="ant-select-selection-search-mirror"
                            >
                               
                            </span>
                          </div>
                        </div>
                      </div>
                      <span
                        class="ant-select-selection-placeholder"
                      >
                        Search Filter : select options from suggested values, for IN/NOT IN operators - press "Enter" after selecting options
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="logs-explorer-views"
          >
            <div
              class="logs-explorer-views-container"
            >
              <div
                class="logs-explorer-views-types"
              >
                <div
                  class="views-tabs-container"
                >
                  <div
                    class="ant-btn-group views-tabs css-dev-only-do-not-override-2i2tap"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-2i2tap ant-btn-default selected_view tab"
                      data-testid="logs-list-view"
                      type="button"
                      value="list"
                    >
                      <span>
                        List view
                      </span>
                    </button>
                    <button
                      class="ant-btn css-dev-only-do-not-override-2i2tap ant-btn-default tab"
                      data-testid="time-series-view"
                      type="button"
                      value="graph"
                    >
                      <span>
                        Time series
                      </span>
                    </button>
                    <button
                      class="ant-btn css-dev-only-do-not-override-2i2tap ant-btn-default tab"
                      data-testid="table-view"
                      type="button"
                      value="table"
                    >
                      <span>
                        Table
                      </span>
                    </button>
                  </div>
                  <div
                    class="logs-actions-container"
                  >
                    <div
                      class="tab-options"
                    >
                      <button
                        class="ant-btn css-dev-only-do-not-override-2i2tap ant-btn-default ant-btn-icon-only periscope-btn"
                        type="button"
                      >
                        <span
                          class="ant-btn-icon"
                        >
                          <svg
                            class="lucide lucide-file-down"
                            fill="none"
                            height="14"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="14"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
                            />
                            <path
                              d="M14 2v4a2 2 0 0 0 2 2h4"
                            />
                            <path
                              d="M12 18v-6"
                            />
                            <path
                              d="m9 15 3 3 3-3"
                            />
                          </svg>
                        </span>
                      </button>
                      <div
                        class="format-options-container"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-2i2tap ant-btn-default ant-btn-icon-only periscope-btn"
                          data-testid="periscope-btn"
                          type="button"
                        >
                          <span
                            class="ant-btn-icon"
                          >
                            <svg
                              class="lucide lucide-sliders-vertical"
                              fill="none"
                              height="14"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="14"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <line
                                x1="4"
                                x2="4"
                                y1="21"
                                y2="14"
                              />
                              <line
                                x1="4"
                                x2="4"
                                y1="10"
                                y2="3"
                              />
                              <line
                                x1="12"
                                x2="12"
                                y1="21"
                                y2="12"
                              />
                              <line
                                x1="12"
                                x2="12"
                                y1="8"
                                y2="3"
                              />
                              <line
                                x1="20"
                                x2="20"
                                y1="21"
                                y2="16"
                              />
                              <line
                                x1="20"
                                x2="20"
                                y1="12"
                                y2="3"
                              />
                              <line
                                x1="2"
                                x2="6"
                                y1="14"
                                y2="14"
                              />
                              <line
                                x1="10"
                                x2="14"
                                y1="8"
                                y2="8"
                              />
                              <line
                                x1="18"
                                x2="22"
                                y1="16"
                                y2="16"
                              />
                            </svg>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="logs-explorer-views-type-content"
                >
                  <div
                    class="logs-list-view-container"
                  >
                    <div
                      class="no-logs-container"
                    >
                      <div
                        class="no-logs-container-content"
                      >
                        <img
                          alt="eyes emoji"
                          class="eyes-emoji"
                          src="/Images/eyesEmoji.svg"
                        />
                        <article
                          class="ant-typography no-logs-text css-dev-only-do-not-override-2i2tap"
                        >
                          No 
                          logs
                           yet.
                          <span
                            class="sub-text"
                          >
                             
                            When we receive 
                            logs
                            , they would show up here
                          </span>
                        </article>
                        <a
                          class="ant-typography send-logs-link css-dev-only-do-not-override-2i2tap"
                        >
                          Sending 
                          logs
                           to SigNoz 
                          <svg
                            class="lucide lucide-arrow-up-right"
                            fill="none"
                            height="16"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M7 7h10v10"
                            />
                            <path
                              d="M7 17 17 7"
                            />
                          </svg>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="explorer-options-container"
              >
                <div
                  class="explorer-options"
                  style="background: transparent;"
                >
                  <div
                    class="view-options"
                  >
                    <div
                      class="ant-select views-dropdown css-dev-only-do-not-override-2i2tap ant-select-single ant-select-show-arrow ant-select-loading ant-select-show-search"
                      style="min-width: 170px;"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="rc_select_TEST_OR_SSR"
                            role="combobox"
                            type="search"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          Select a view
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow ant-select-arrow-loading"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="loading"
                          class="anticon anticon-loading anticon-spin"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="loading"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="0 0 1024 1024"
                            width="1em"
                          >
                            <path
                              d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                    <button
                      class="ant-btn css-dev-only-do-not-override-2i2tap ant-btn-round ant-btn-default"
                      disabled=""
                      type="button"
                    >
                      <span
                        class="ant-btn-icon"
                      >
                        <svg
                          class="lucide lucide-disc3"
                          fill="none"
                          height="16"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                          <path
                            d="M6 12c0-1.7.7-3.2 1.8-4.2"
                          />
                          <circle
                            cx="12"
                            cy="12"
                            r="2"
                          />
                          <path
                            d="M18 12c0 1.7-.7 3.2-1.8 4.2"
                          />
                        </svg>
                      </span>
                      <span>
                        Save this view
                      </span>
                    </button>
                  </div>
                  <hr
                    class=""
                  />
                  <div
                    class="actions"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-2i2tap ant-btn-round ant-btn-default"
                      disabled=""
                      type="button"
                    >
                      <span
                        class="ant-btn-icon"
                      >
                        <svg
                          class="lucide lucide-concierge-bell"
                          fill="none"
                          height="16"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M3 20a1 1 0 0 1-1-1v-1a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v1a1 1 0 0 1-1 1Z"
                          />
                          <path
                            d="M20 16a8 8 0 1 0-16 0"
                          />
                          <path
                            d="M12 4v4"
                          />
                          <path
                            d="M10 4h4"
                          />
                        </svg>
                      </span>
                      <span>
                        Create an Alert
                      </span>
                    </button>
                    <button
                      class="ant-btn css-dev-only-do-not-override-2i2tap ant-btn-round ant-btn-primary"
                      disabled=""
                      type="button"
                    >
                      <span
                        class="ant-btn-icon"
                      >
                        <svg
                          class="lucide lucide-plus"
                          fill="none"
                          height="16"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5 12h14"
                          />
                          <path
                            d="M12 5v14"
                          />
                        </svg>
                      </span>
                      <span>
                        Add to Dashboard
                      </span>
                    </button>
                  </div>
                  <div
                    class="actions"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle info-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                    <button
                      class="ant-btn css-dev-only-do-not-override-2i2tap ant-btn-circle ant-btn-default ant-btn-icon-only"
                      data-testid="hide-toolbar"
                      disabled=""
                      type="button"
                    >
                      <span
                        class="ant-btn-icon"
                      >
                        <svg
                          class="lucide lucide-panel-bottom-close"
                          fill="none"
                          height="16"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <rect
                            height="18"
                            rx="2"
                            width="18"
                            x="3"
                            y="3"
                          />
                          <path
                            d="M3 15h18"
                          />
                          <path
                            d="m15 8-3 3-3-3"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="explorer-option-droppable-container"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;
